...
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab_aggiungi_voce"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <LinearLayout
...
                android:src="@drawable/ic_edit"
                app:tint="@color/red_209" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_view_lista_spesa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
...
