<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:background="@drawable/border_red_209">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_layout_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_209"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/text_view_cambia_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginVertical="16dp"
                android:textSize="16dp"
                android:text="CAMBIA PASSWORD"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/frame_layout_label"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/border"
                    android:inputType="textPassword"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:hint="vecchia password"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_new_first_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/border"
                    android:inputType="textPassword"
                    android:padding="2dp"
                    android:hint="nuova password"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_new_second_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/border"
                    android:inputType="textPassword"
                    android:padding="2dp"
                    android:hint="ripeti password"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="Cancel"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_ok"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="OK"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>