...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cambia_password"
                    android:onClick="changePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cambia password"
                    android:backgroundTint="@color/red_209"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/button_rimuovi_password"
                    android:onClick="removePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rimuovi password"
                    android:backgroundTint="@color/red_209"
                    android:textColor="@color/white"/>
...
