<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control.Impostazioni.ImpostazioniActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="Sicurezza"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="#8F8F8F"/>

            <Button
                android:id="@+id/button_imposta_password"
                android:onClick="setPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Imposta password"
                android:backgroundTint="@color/red_209"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>